--- a/demo_albarokah/index.html
+++ b/demo_albarokah/index.html
@@ -3,6 +3,8 @@
 <head lang="en">
   <meta charset="UTF-8">
   <title>Point of Sales</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <script src="vendors/lodash.min.js" type="text/javascript"></script>
   <script src="vendors/pouchdb.min.js" type="text/javascript"></script>
   <script src="vendors/pouchdb.find.js" type="text/javascript"></script>
@@ -13,7 +15,7 @@
   <script src="vendors/pikaday.js"></script>
   <style type="text/css">
     html, body {
-      background-image: url(latarbelakang.jpg);
+      background-image: url(background.jpg);
     }
 
     @font-face {
@@ -53,7 +55,7 @@
 <body>
   <nav class="primary">
         <div class="row">
-            <div class="five columns shop-name"><a id="home" href="#home">&nbsp;</a></div>
+            <div class="five columns shop-name"><a id="home" href="#home">البركة</a></div>
             <div class="two columns u-text-center">
               <div class="preloader" id="preloader" style="display:none"></div>
             </div>
@@ -68,8 +70,8 @@
                     <div class="separator">&nbsp;</div>
                     <a href="#configurations">Konfigurasi</a>
                     <div class="separator">&nbsp;</div>
-                    <a href="#help">Panduan (FAQ)</a>
-                    <a href="#about">Tentang Aplikasi</a>
+                    <a href="#help">Panduan</a>
+                    <a href="#about">Tentang</a>
                   </div>
                 </div>
             </div>
